# Generated by Django 5.0.6 on 2024-07-23 17:50

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('main', '0002_dog'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Walk',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('start', models.DateTimeField()),
                ('finish', models.DateTimeField(null=True)),
            ],
        ),
        migrations.CreateModel(
            name='DogPhoto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('url', models.FileField(upload_to='dogsphotos')),
                ('dog', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='main.dog')),
            ],
        ),
        migrations.CreateModel(
            name='WalkUserDog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('dog', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='main.dog')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
                ('walk', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='main.walk')),
            ],
        ),
        migrations.AddConstraint(
            model_name='walkuserdog',
            constraint=models.UniqueConstraint(fields=('walk', 'user', 'dog'), name='unique_user_for_dog'),
        ),
    ]
